Sun May 27 14:06:33 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - second attempt to add SVN revision in NUT version (as suggested by 
   Eric S. Raymond).
	
Sat May 26 16:47:23 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - data/driver.list: disambiguated Belkin F6C1100-UNV models

Sat May 26 14:21:32 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - [various]: revert changes to add SVN revision in NUT version

Sat May 26 12:03:10 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - data/driver.list: added SVEN Power Smart RM 2000 to the list.

Sat May 26 11:49:12 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - drivers/megatec.c: added support for 48V batteries.

Fri May 25 18:54:54 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - packaging/debian/Makefile.am: Assuming removing the removal of
   nut-usb.postinst and nut-usb.prerm was intentional, the dependency
   should be removed as well.

Fri May 25 18:39:47 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - [various]: patch to add SVN revision in NUT version (by Eric S. Raymond)

Fri May 25 14:19:11 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - packaging/debian: major updates (refer to debian/changelog)

Fri May 25 02:01:40 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - Removed redundant udev installation rule from debian/rules.

Fri May 25 00:59:44 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - Added dependencies on dbus, dbus-glib and glib development headers to the
   Debian control file.

Wed May 23 23:59:59 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/dstate-hal.c: added empty alarm_init, alarm_set and alarm_commit
   functions

Wed May 23 21:13:10 UTC 2007 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Enabled requested Alarm function in bcmxcp.c

Wed May 23 18:49:21 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * common/common.c, include/common.h: